--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -31,6 +31,7 @@ android {
         applicationId "io.github.ponnamkarthik.flutterhtmltextviewexample"
         minSdkVersion 16
         targetSdkVersion 28
+        compileSdkVersion 31
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
